# embassy

embassy-stm32/: Cargo.toml  build.rs
embassy-stm32/src/can/: common.rs  fdcan.rs
embassy-stm32/src/can/bxcan/: mod.rs
embassy-stm32/src/rcc/: h.rs
examples/stm32g4/: Cargo.toml
examples/stm32g4/.cargo/: config.toml
tests/stm32/: Cargo.toml
tests/stm32/.cargo/: config.toml
