[package]
edition = "2021"
name = "embassy-stm32g4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32g491re to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = [ "defmt", "time-driver-any", "stm32g491re", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.6.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.2.0", path = "../../embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../../embassy-futures" }
usbd-hid = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-can = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"
#epd-waveshare = { version = "0.5.0", features = ["graphics"]  }
#embedded-graphics = "0.7.1"
#embedded-graphics-core = { version = "0.4" }
#embedded-graphics = "0.8"
#embedded-graphics-core = { version = "0.3.3" }

embedded-hal-bus = "0.1.0"

embedded-svc = { version = "0.25", optional = true, default-features = false }
embedded-graphics = "0.6.2"
ssd1680 = "0.1.0"

[profile.release]
debug = 2
