[package]
edition = "2021"
name = "embassy-stm32g4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32g491re to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = [ "defmt", "time-driver-any", "stm32g491re", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.5.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "task-arena-size-8192"] }
embassy-time = { version = "0.3.0", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "../../embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../../embassy-futures" }
usbd-hid = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-can = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"
embassy-embedded-hal = { version = "0.1.0", path = "../../embassy-embedded-hal", features = [
    "defmt",
] }


embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#mipidsi = {version="0.7.1" }
display-interface = "0.5.0"
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
display-interface-spi = "0.5.0"

mipidsi = {version="0.7.1", path = "../../../mipidsi/mipidsi" }
ssd1309 = {version="0.4.0", path= "/home/cschuhen/rust/ssd1309", features=["graphics"] }
sh1108 = {version="0.1.0", path= "../../../sh1108" }



[features]
st7789 = []
st7735s = []
ssd1309 = []
sh1108 = []


[profile.release]
debug = 2
